[gd_scene load_steps=2 format=3 uid="uid://c6i1ndys2ioer"]

[ext_resource type="Script" path="res://Scripts/Menus/level_select_menu.gd" id="1_h7kvm"]

[node name="level_select_menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h7kvm")

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -512.0
offset_right = 85.0
offset_bottom = -408.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 70
text = "Back"
flat = true

[node name="Hub" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -821.5
offset_top = -516.0
offset_right = -651.5
offset_bottom = -412.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 70
text = "Hub"
flat = true

[node name="Fire Puzzle" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -917.5
offset_top = -411.0
offset_right = -549.5
offset_bottom = -307.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 70
text = "Fire Puzzle"
flat = true

[node name="Outside Rig" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -926.5
offset_top = -324.0
offset_right = -532.5
offset_bottom = -220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 70
text = "Outside Rig"
flat = true

[node name="Tile Puzzle" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -924.5
offset_top = -198.0
offset_right = -530.5
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 70
text = "Tile Puzzle"
flat = true

[node name="Pipe Puzzle" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -930.0
offset_top = -74.0
offset_right = -543.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 70
text = "Pipe Puzzle"
flat = true

[node name="Dial Puzzle" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -930.0
offset_top = 26.0
offset_right = -543.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 70
text = "Dial Puzzle
"
flat = true

[node name="facilityExterior" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -298.0
offset_right = 199.0
offset_bottom = -194.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
text = "facility_exterior"
flat = true

[node name="underwater_floor" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -201.0
offset_right = 199.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
text = "underwater_floor"
flat = true

[node name="facility_enterance" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -102.0
offset_right = 199.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
text = "facility_enterance"
flat = true

[node name="first_floor" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -24.0
offset_right = 199.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
text = "first_floor"
flat = true

[node name="second_floor" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = 63.0
offset_right = 199.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
text = "second_floor
"
flat = true

[node name="control_floor" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = 144.0
offset_right = 199.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
text = "control_floor
"
flat = true

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Hub" to="." method="_on_hub_pressed"]
[connection signal="pressed" from="Fire Puzzle" to="." method="_on_fire_puzzle_pressed"]
[connection signal="pressed" from="Outside Rig" to="." method="_on_outside_rig_pressed"]
[connection signal="pressed" from="Tile Puzzle" to="." method="_on_tile_puzzle_pressed"]
[connection signal="pressed" from="Pipe Puzzle" to="." method="_on_pipe_puzzle_pressed"]
[connection signal="pressed" from="Dial Puzzle" to="." method="_on_dial_puzzle_pressed"]
[connection signal="pressed" from="facilityExterior" to="." method="_on_facility_exterior_pressed"]
[connection signal="pressed" from="underwater_floor" to="." method="_on_underwater_floor_pressed"]
[connection signal="pressed" from="facility_enterance" to="." method="_on_facility_enterance_pressed"]
[connection signal="pressed" from="first_floor" to="." method="_on_first_floor_pressed"]
[connection signal="pressed" from="second_floor" to="." method="_on_second_floor_pressed"]
[connection signal="pressed" from="control_floor" to="." method="_on_control_floor_pressed"]
